Fixing (and open bars) look on mobile

--- a/css/pages.css
+++ b/css/pages.css
@@ -74,6 +74,9 @@ footer {
 
 }
 @media (min-width: 550px) {
+    .show-me-mobile {
+        display: none;
+    }
     .subheader {
         font-size: 10em;
         line-height: 1em;
